skills spacing correct

--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,9 @@ body{
     margin: auto;
     margin-top: 4rem;
 }
+
+#skills{
+    width: 80%;
+    margin: auto;
+    margin-top: 4rem;
+}
